cluster/apps/minio/minio-operator/tenant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-tenant-console
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - secretName: tenant-tls
      hosts:
        - "s3.${SECRET_DOMAIN}"
  rules:
    - host: "s3.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storage-console
                port:
                  number: 9443
